[package]
name = "rust-sandbox"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "guessing"
path = "src/guessing.rs"

[[bin]]
name = "function"
path = "src/function.rs"

[[bin]]
name = "string"
path = "src/string.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "method"
path = "src/method.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"


